lint fix (+4 squashed commits) Squashed commits: [4377acddfb] Update end to end tests [0256f47886] add line removed by mistake [cb06d4cbf4] lint fixes [2973c73659] Update: Implement the new discussion panel design.

--- a/packages/editor/src/style.scss
+++ b/packages/editor/src/style.scss
@@ -18,6 +18,7 @@
 @import "./components/post-actions/style.scss";
 @import "./components/post-card-panel/style.scss";
 @import "./components/post-content-information/style.scss";
+@import "./components/post-discussion/style.scss";
 @import "./components/post-excerpt/style.scss";
 @import "./components/post-featured-image/style.scss";
 @import "./components/post-format/style.scss";
