split shadow dropdown button into two buttons

--- a/packages/edit-site/src/components/global-styles/style.scss
+++ b/packages/edit-site/src/components/global-styles/style.scss
@@ -141,6 +141,10 @@
 	}
 }
 
+.edit-site-global-styles__shadow-editor__dropdown {
+	width: 100%;
+}
+
 .edit-site-global-styles-screen-css {
 	flex: 1 1 auto;
 	display: flex;
